--- a/src/index.css
+++ b/src/index.css
@@ -186,6 +186,7 @@ nav .logo-container h3 {
     text-transform: uppercase;
     font-size: 25px;
     color: #5FB51C;
+    margin: 0;
 }
 
 @media (max-width: 375px) {
@@ -970,6 +971,11 @@ nav .logo-container h3 {
 .onboarding-container .logo-container h3 {
     color: #5FB51C;
 }
+.onboarding h2 {
+    font-weight: bold;
+    color: black;
+    font-size: 26px;
+}
 
 .onboarding h2, .onboarding label {
     font-weight: bold;
@@ -1064,6 +1070,10 @@ nav .logo-container h3 {
     width: 50%;
 }
 
+.onboarding form .primary-button:hover {
+    background-color: #9AFB4D;
+}
+
 .onboarding form .photo-container img {
     max-height: 250px;
     border-radius: 10px;
@@ -1102,6 +1112,12 @@ nav .logo-container h3 {
     height: 20px;
 }
 
+@media (max-width: 425px) {
+    .onboarding form .primary-button {
+        width: 90%;
+    }
+}
+
 @media (max-width: 768px) {
     .onboarding form div{
         display: flex;
@@ -1114,6 +1130,7 @@ nav .logo-container h3 {
 
     .onboarding form input {
         padding: 10px 25px;
+        width: 90%;
     }
 
     .onboarding form section {
@@ -1121,7 +1138,7 @@ nav .logo-container h3 {
     }
 
     .onboarding form input[type=submit] {
-        width: 90%;
+        width: 89%;
         margin: 5px;
     }
 
@@ -1135,13 +1152,12 @@ nav .logo-container h3 {
     }
 
     .onboarding form ul li {
-        font-size: 10px;
+        font-size: 14px;
     }
 
     .onboarding h2{
-        font-size: 20px;
+        font-size: 22px;
     }
-
 }
 
 /*------------- Profile image Crud page -----------*/
@@ -1273,7 +1289,7 @@ nav .logo-container h3 {
 }
 
 .plan-card .name-button-section .about-container {
-    margin-top: 15px;
+    margin-top: 5px;
 }
 
 .plan-card .name-button-section article .about {
@@ -1488,14 +1504,19 @@ nav .logo-container h3 {
         font-size: 16px;
     }
     .plan-crud-container .plan-card {
-        width: 100%;
-        margin-left: 0;
+        width: 92%;
+        margin-left: auto;
+        margin-right: auto;
+
     }
     .plan-crud-container .plan-card .image-container {
         width: 100%;
     }
     .plan-crud-container .plan-card .image-container img {
         width: 100%;
+    }
+    .plan-crud-container .primary-button {
+        font-size: 16px;
     }
 }
 
@@ -1505,9 +1526,7 @@ nav .logo-container h3 {
         margin: 10px auto 5px;
     }
     .plan-crud-container .plan-card {
-        width: 100%;
         height: 350px;
-        margin: auto;
     }
     .plan-crud-container .plan-card .image-container {
         height: 40%;
@@ -1821,7 +1840,7 @@ nav .logo-container h3 {
 }
 
 .show-message-container li {
-    padding: 10px 30px;
+    padding: 5px 20px;
 }
 
 .show-message-container h2,
@@ -1853,8 +1872,15 @@ nav .logo-container h3 {
     font-size: 14px;
 }
 
+.show-message-container .me .sent-icon {
+    width: 15px;
+    height: 15px;
+    margin-left: 5px;
+}
 
-
+.show-message-container .you .sent-icon {
+    display: none;
+}
 .show-message-container .me {
     text-align: right;
 }
